# clear-notation

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.cln  README.html  README.md  TODOS.md  clearnotation-v0.1-ast-conformance.md  clearnotation-v0.1-config.md  clearnotation-v0.1-examples.md  clearnotation-v0.1-syntax.md  clearnotation-v0.1.ebnf  clearnotation-v1.0-ast-conformance.md  clearnotation-v1.0-syntax.md  clearnotation-v1.0.ebnf  clearnotation.css  clearnotation.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
clearnotation-js/: README.md  package.json  vitest.config.ts
clearnotation_harness/: __init__.py  adapter.py  cli.py  errors.py  loader.py  models.py  runner.py  runtime.py
clearnotation_reference/: __init__.py  adapter.py  clearnotation.css  cli.py  config.py  converter.py  diagnostics.py  errors.py  formatter.py  indexer.py  inline_parser.py  linter.py  literals.py  lsp.py  models.py  normalizer.py  parser.py  patterns.py  query.py  registry.py  renderer.py  utils.py  validator.py
docs/: migration-from-markdown.cln  migration-from-markdown.html
editor/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
fixtures/: README.md  escaping-matrix.json  manifest.toml
landing/: index.html  style.css
reference/: builtin-registry.toml  parser-harness.md
scripts/: generate-ast-snapshots.py
tests/: __init__.py  test_ast_snapshots.py  test_cli.py  test_cli_init.py  test_cli_new_commands.py  test_comments.py  test_config.py  test_converter.py  test_formatter.py  test_include_inlining.py  test_indexer.py  test_linter.py  test_loader.py  test_multi_error.py  test_nested_lists.py  test_pipeline_e2e.py  test_query.py  test_redos.py  test_renderer.py  test_renderer_math.py  test_runner.py  test_syntax_highlight.py  test_watch.py
tree-sitter-clearnotation/: grammar.js  package.json  tree-sitter-clearnotation.wasm  tree-sitter.json  wasm-spike.mjs
vscode-clearnotation/: CHANGELOG.md  README.md  (+4 more)
(+277 files in other folders)
