[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearnotation"
dynamic = ["version"]
description = "ClearNotation: a docs-first, formally specified markup language"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
lsp = ["pygls>=1.0"]
math = ["latex2mathml>=3.77"]
highlight = ["pygments>=2.17"]
watch = ["watchdog>=4.0"]
convert = ["mistune>=3.0"]

[project.urls]
Homepage = "https://github.com/rjmitchell/clear-notation"
Repository = "https://github.com/rjmitchell/clear-notation"

[project.scripts]
cln = "clearnotation_reference.cli:main"
cln-lsp = "clearnotation_reference.lsp:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["clearnotation_reference*", "clearnotation_harness*"]

[tool.setuptools.package-data]
clearnotation_reference = ["clearnotation.css", "builtin-registry.toml"]
